test: add rag coverage reporting and fix Java 21 API for Java 17 compatibility